[package]
name = "latin_dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8" , features = ["r2d2", "serde_json", "postgres"]}
serde = { version = "=1.0.120" , features = ["derive"] }
serde_json = "1.0.81"
r2d2 = "0.8.9"
regex = "1.5.6"
lazy_static = "1.4.0"
nom = "7.1.1"
clap = { version = "3.1.18", features = ["derive"] }
dotenv = "0.15.0"
